; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-dce.c_find_all_control_dependences.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-dce.c_find_all_control_dependences.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edge_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.edge_list*)* @find_all_control_dependences to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_all_control_dependences(%struct.edge_list* %0) #0 {
  %2 = alloca %struct.edge_list*, align 8
  %3 = alloca i32, align 4
  store %struct.edge_list* %0, %struct.edge_list** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %13, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.edge_list*, %struct.edge_list** %2, align 8
  %7 = call i32 @NUM_EDGES(%struct.edge_list* %6)
  %8 = icmp slt i32 %5, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %4
  %10 = load %struct.edge_list*, %struct.edge_list** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @find_control_dependence(%struct.edge_list* %10, i32 %11)
  br label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %3, align 4
  br label %4

16:                                               ; preds = %4
  ret void
}

declare dso_local i32 @NUM_EDGES(%struct.edge_list*) #1

declare dso_local i32 @find_control_dependence(%struct.edge_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
